--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,18 @@
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
     <string name="invalid_location">The stored location is not valid</string>
+
+    <!-- Weather -->
+    <string name="weather_temp">%1$.1f°</string>
+    <string name="weather_feels_like">Feels like %1$.1f°</string>
+    <string name="weather_temp_min">Minimum %1$.1f°</string>
+    <string name="weather_temp_max">Maximum %1$.1f°</string>
+
+    <!-- Buttons -->
+    <string name="button_forecast">Forecast</string>
+
+    <!-- Descriptions -->
+    <string name="description_location">Location</string>
+    <string name="description_weather">Weather</string>
+    <string name="location_lat_lon">%1$10.8f / %2$11.8f</string>
 </resources>
