--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -14,4 +14,5 @@
     <string name="description_weather">Weer</string>
     <string name="title_activity_forecast">Voorspelling</string>
     <string name="button_forecast">Voorspelling</string>
+    <string name="description_weather_icon">Weer Icoon</string>
 </resources>
