--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
 
     <!-- Menu -->
     <string name="menu_settings">Settings</string>
+    <string name="menu_maps">Open in Maps</string>
+    <string name="menu_background">Change Background</string>
 
     <!-- Sync Preferences -->
     <string name="header_location">Location</string>
