--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="title_activity_forecast">Forecast</string>
     <string name="title_activity_settings">Settings</string>
 
+    <!-- Errors -->
+    <string name="no_internet">No Internet</string>
+    <string name="not_loaded">The data could not be loaded, please try again</string>
+
     <!-- Menu -->
     <string name="menu_settings">Settings</string>
     <string name="menu_maps">Open in Maps</string>
